2012-05-29  Jessie Berlin  <jberlin@apple.com>

        [Mac] fast/events/message-port-constructor-for-deleted-document.html ASSERTS in Debug.

        This is happening often enough that it is necessary to add the test to the Mac Skipped list
        in order to keep the bots green.

        * platform/mac/Skipped:

2012-05-29  Jussi Kukkonen  <jussi.kukkonen@intel.com>

        [EFL][DRT] move idn encoding test to test_expectations.txt
        https://bugs.webkit.org/show_bug.cgi?id=86080

        Unreviewed gardening. Implementing copy{En,De}codedHostName just
        to test them is not useful: marking fast/encoding/idn-security.html
        as expected to fail.

        * platform/efl/Skipped:
        * platform/efl/test_expectations.txt:

2012-05-29  Csaba Osztrogonác  <ossy@webkit.org>

        [Qt] Unreviewed gardening.

        * platform/qt-5.0-wk2/compositing/geometry/composited-in-columns-expected.txt: Added.
        * platform/qt-5.0-wk2/fast/forms/placeholder-pseudo-style-expected.png:
        * platform/qt-5.0-wk2/fast/forms/placeholder-pseudo-style-expected.txt:
        * platform/qt-5.0-wk2/svg/css/text-gradient-shadow-expected.png: Added.
        * platform/qt-5.0-wk2/svg/css/text-gradient-shadow-expected.txt:
        * platform/qt-5.0/fast/forms/placeholder-pseudo-style-expected.png:
        * platform/qt-5.0/fast/forms/placeholder-pseudo-style-expected.txt:
        * platform/wk2/Skipped:

2012-05-29  Marcus Bulach  <bulach@chromium.org>

        [chromium] Regression: fast/forms/select/optgroup-clicking.html is failing
        https://bugs.webkit.org/show_bug.cgi?id=87748

        Unreviewed gardening.

        This test was added by r118772 and it fails with a mismatch in menulist.selectedIndex.

        * platform/chromium/test_expectations.txt:

2012-05-29  Tony Payne  <tpayne@chromium.org>

        Fix new layout tests for images with color profiles by using fixed size
        https://bugs.webkit.org/show_bug.cgi?id=87542
