@@ -1,3 +1,15 @@
+2012-05-29  Li Yin  <li.yin@intel.com>
+
+        [FileAPI] Miss FileList test
+        https://bugs.webkit.org/show_bug.cgi?id=87696
+
+        Reviewed by Kentaro Hara.
+
+        WebKit should have the test to track the attribute of FileList.
+
+        * fast/files/file-list-test-expected.txt: Added.
+        * fast/files/file-list-test.html: Added.
+
 2012-05-29  Jessie Berlin  <jberlin@apple.com>
 
         [Mac] fast/events/message-port-constructor-for-deleted-document.html ASSERTS in Debug.
